--- a/nicnbk-data/nicnbk-data-service-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-impl/pom.xml
@@ -32,13 +32,13 @@
             <version>1.0</version>
         </dependency>
 
-        <dependency>
-            <groupId>satpathy</groupId>
-            <artifactId>jxirr</artifactId>
-            <version>1.0.1-SNAPSHOT</version>
-            <!--<scope>system</scope>-->
-            <!--<systemPath>${project.basedir}/lib/jxirr-1.0.1-SNAPSHOT.jar</systemPath>-->
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>satpathy</groupId>-->
+<!--            <artifactId>jxirr</artifactId>-->
+<!--            <version>1.0.1-SNAPSHOT</version>-->
+<!--            &lt;!&ndash;<scope>system</scope>&ndash;&gt;-->
+<!--            &lt;!&ndash;<systemPath>${project.basedir}/lib/jxirr-1.0.1-SNAPSHOT.jar</systemPath>&ndash;&gt;-->
+<!--        </dependency>-->
 
         <!-- EXTERNAL -->
         <dependency>
