--- a/nicnbk-ui-angular2/package.json
+++ b/nicnbk-ui-angular2/package.json
@@ -20,12 +20,13 @@
     "@angular/router": "~3.1.0",
     "angular2-busy": "^1.0.2",
     "angular2-elastic": "0.13.0",
-    "ng2-tag-input": "^0.2.3",
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "file-saver": "^1.3.2",
+    "font-awesome": "^4.7.0",
     "moment": "2.14.1",
     "ng2-select": "^1.1.0",
+    "ng2-tag-input": "^0.2.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.25"
