--- a/nicnbk-data/nicnbk-data-service-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-impl/pom.xml
@@ -162,6 +162,12 @@
             <artifactId>rome</artifactId>
             <version>1.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.aerogear</groupId>
+            <artifactId>aerogear-otp-java</artifactId>
+            <version>1.0.0.M1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
