--- a/nicnbk-data/nicnbk-data-service-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-impl/pom.xml
@@ -168,6 +168,16 @@
             <version>1.0.0.M1</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- javax.annotation could not be resolved at JWTTokenServiceImpl.java -->
+        <!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+        <!--<dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+        -->
+
     </dependencies>
 
 
