--- a/nicnbk-data/pom.xml
+++ b/nicnbk-data/pom.xml
@@ -30,6 +30,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+
+        <!-- java.lang.NoClassDefFoundError: javax/xml/bind/ValidationException (java version upgrade v12 )-->
+        <!--<dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        -->
     </dependencies>
 
     <dependencyManagement>
