--- a/nicnbk-data/nicnbk-data-repo-api/pom.xml
+++ b/nicnbk-data/nicnbk-data-repo-api/pom.xml
@@ -68,6 +68,10 @@
             <artifactId>nicnbk-common-repo-impl</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
