--- a/nicnbk-data/nicnbk-data-service-api/pom.xml
+++ b/nicnbk-data/nicnbk-data-service-api/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.6.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.bloombergblp</groupId>
+            <artifactId>blpapi</artifactId>
+            <version>3.15.2-1</version>
+        </dependency>
     </dependencies>
 
 
