--- a/nicnbk-data/nicnbk-data-ws-impl/pom.xml
+++ b/nicnbk-data/nicnbk-data-ws-impl/pom.xml
@@ -47,6 +47,17 @@
             <artifactId>commons-codec</artifactId>
             <version>1.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.bloombergblp</groupId>
+            <artifactId>blpapi</artifactId>
+            <version>3.15.2-1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.assylias</groupId>
+            <artifactId>jbloomberg</artifactId>
+            <version>3.7</version>
+        </dependency>
     </dependencies>
 
     <build>
