--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -1,49 +1,20 @@
 
 ### TEST SERVER CONFIGURATIONS ########################################################################################
 
-## BACKEND PORT
-#server.port=8087
-#
-#### LOGGING
-#logging.config=classpath:logback-spring-test.xml
-#
-#### DATASOURCE
-#spring.datasource.url=jdbc:postgresql://localhost/test_unic
-#spring.datasource.username=postgres
-#spring.datasource.password=PpostgresS
-#
-#### FILE STORAGE
-##filestorage.root.directory=C:/APP/TEST/FILE_STORAGE_TEST
-#filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
-#
-## Tell Spring Security (if used) to require requests over HTTPS
-#security.require-ssl=true
-## The format used for the keystore
-#server.ssl.key-store-type=PKCS12
-## The path to the keystore containing the certificate
-#server.ssl.key-store=/home/unic/ssl/keystore.p12
-## The password used to generate the certificate
-#server.ssl.key-store-password=HappyUnic2020
-## The alias mapped to the certificate
-#server.ssl.key-alias=tomcat
-
-### PROD SERVER CONFIGURATIONS ########################################################################################
-
-#### BACKEND PORT
-server.port=8089
+# BACKEND PORT
+server.port=8087
 
 ### LOGGING
-logging.config=classpath:logback-spring.xml
+logging.config=classpath:logback-spring-test.xml
 
 ### DATASOURCE
-spring.datasource.url=jdbc:postgresql://localhost/unic
+spring.datasource.url=jdbc:postgresql://localhost/test_unic
 spring.datasource.username=postgres
 spring.datasource.password=PpostgresS
 
 ### FILE STORAGE
-#filestorage.root.directory=C:/APP/FILE_STORAGE
+#filestorage.root.directory=C:/APP/TEST/FILE_STORAGE_TEST
 filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
-multipart.location= /home/unic/datastorage/FILE_STORAGE/tmp
 
 # Tell Spring Security (if used) to require requests over HTTPS
 security.require-ssl=true
@@ -55,6 +26,35 @@ server.ssl.key-store=/home/unic/ssl/keystore.p12
 server.ssl.key-store-password=HappyUnic2020
 # The alias mapped to the certificate
 server.ssl.key-alias=tomcat
+
+### PROD SERVER CONFIGURATIONS ########################################################################################
+
+##### BACKEND PORT
+#server.port=8089
+#
+#### LOGGING
+#logging.config=classpath:logback-spring.xml
+#
+#### DATASOURCE
+#spring.datasource.url=jdbc:postgresql://localhost/unic
+#spring.datasource.username=postgres
+#spring.datasource.password=PpostgresS
+#
+#### FILE STORAGE
+##filestorage.root.directory=C:/APP/FILE_STORAGE
+#filestorage.root.directory=/home/unic/datastorage/FILE_STORAGE
+#multipart.location= /home/unic/datastorage/FILE_STORAGE/tmp
+#
+## Tell Spring Security (if used) to require requests over HTTPS
+#security.require-ssl=true
+## The format used for the keystore
+#server.ssl.key-store-type=PKCS12
+## The path to the keystore containing the certificate
+#server.ssl.key-store=/home/unic/ssl/keystore.p12
+## The password used to generate the certificate
+#server.ssl.key-store-password=HappyUnic2020
+## The alias mapped to the certificate
+#server.ssl.key-alias=tomcat
 
 ### LOCAL DEV CONFIGURATIONS ##########################################################################################
 
