--- a/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
+++ b/nicnbk-data/nicnbk-data-ws-impl/src/main/resources/application.properties
@@ -82,6 +82,19 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
+#SMTP
+spring.mail.host=mail.nicnbk.kz
+spring.mail.port=587
+
+spring.mail.username=unic@nicnbk.kz
+spring.mail.password=Hfccskrf!)_3764
+
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=false
+
+# path to attachment file
+attachment.invoice=C:/Users/tleugabylov/Documents/Middle office.png
+
 ### Jackson (for REST)
 ## @Bean Jackson2ObjectMapperBuilder - instead of format config
 #spring.jackson.date-format=dd-mm-yyyy
